# trackdlo_perception-release

./: CLAUDE.md  CMakeLists.txt  LICENSE  README.ja.md  README.md  package.xml  patches.conf  setup.cfg  setup.py  tracks.yaml
docker/: .env  Dockerfile.base  Dockerfile.core  build.sh  docker-compose.nvidia.yml  docker-compose.yml  ros_entrypoint.sh  run.sh
docs/superpowers/plans/: 2026-04-02-phase1-github-release.md
docs/superpowers/specs/: 2026-04-02-ros2-package-release-design.md
include/trackdlo_core/: evaluator.hpp  image_preprocessor.hpp  pointcloud_cuda.cuh  visualizer.hpp
scripts/: init_tracker
src/: pipeline_manager.cpp  pointcloud_cuda.cu  trackdlo_node.cpp  visibility_checker.cpp
test/: test_base.py  test_hsv_node.py
trackdlo_bringup/: package.xml
trackdlo_bringup/config/: evaluation_params.yaml  realsense_params.yaml
trackdlo_bringup/launch/: camera.launch.py  evaluation.launch.py  trackdlo.launch.py
trackdlo_bringup/rviz/: tracking.rviz
trackdlo_core/: CMakeLists.txt  package.xml
trackdlo_core/include/trackdlo_core/: pipeline_manager.hpp  trackdlo.hpp  utils.hpp  visibility_checker.hpp
trackdlo_core/src/: evaluator.cpp  image_preprocessor.cpp  run_evaluation.cpp  trackdlo.cpp  utils.cpp  visualizer.cpp
trackdlo_core/trackdlo_core/: initialize.py  utils.py
trackdlo_msgs/: package.xml
trackdlo_segmentation/: __init__.py  setup.cfg
trackdlo_segmentation/trackdlo_segmentation/: base.py  hsv_node.py
trackdlo_utils/: depth_format_converter.py  package.xml  param_tuner_node.py  setup.py  tracking_result_img_from_pointcloud_topic.py  tracking_test.py
trackdlo_utils/trackdlo_utils/: collect_pointcloud.py  composite_view_node.py  mask.py  simulate_occlusion.py  simulate_occlusion_eval.py
